# CLion

CLionProjects/: CLionProjects.cbp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
CLionProjects/app/: CMakeLists.txt  Makefile  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexDecl.cpp  VertexDecl.h  app  app.cbp  cmake_install.cmake  main.cpp
CLionProjects/libs/: CMakeLists.txt  Makefile  cmake_install.cmake  libs.cbp
CLionProjects/libs/SDL2-2.0.7/: Makefile  SDL2.cbp  cmake_install.cmake  sdl2-config  sdl2.pc
CLionProjects/libs/cal/: CMakeLists.txt  Makefile  cal.cbp  calculater.cpp  calculater.h  cmake_install.cmake
CLionProjects/libs/glfw-3.2.1/: GLFW.cbp
CLionProjects/sdlapp/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  sdlapp.cbp
